--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
            
             <div id="logo-svg">
                
-                <img src="../svg/logo1.svg" alt=""/>
+                <img src="../../../svg/logo1.svg" alt=""/>
             </div><!--end logo-svg-->
 
             <div class="menu">
