--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
         <div id="iinto" class="into">
 
-          <img class="intoagency" src="svg/SVG/into.svg" alt=""/>
-          <img class="moto" src="svg/SVG/moto.svg" alt=""/>
+          <img class="intoagency" src="../../svg/into.svg" alt=""/>
+          <img class="moto" src="../../svg/moto.svg" alt=""/>
            
 
             </div><!-- end into our agency-->
@@ -110,7 +110,7 @@
                 Our attention is concentrated on how 
                 technology can make the human experience 
                 more meaningful.</p>
-                <img src="svg/SVG/dca.svg" alt="">
+                <img src="../../svg/dca.svg" alt="">
 
             </div><!-- end into two-->
 
@@ -118,7 +118,7 @@
 
         <div id="Principles">
             
-          <img src="svg/SVG/principles.svg" alt=""/>
+          <img src="../../svg/principles.svg" alt=""/>
 
         </div><!-- end principles-->
 
